--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "npm run clean && npm run compile",
     "lint": "eslint --ignore-path .gitignore .",
     "lint-fix": "eslint --fix --ignore-path .gitignore .",
-    "test": "npm run clean && ts-mocha --recursive \"test/**/*.test.*\"",
+    "test": "mocha --require ts-node/register --recursive \"test/**/*.test.*\"",
     "coverage": "nyc --reporter=lcov --all --include \"src/**/*.ts\" npm test",
     "prepack": "echo \"Must pack/publish from ./dist\" && exit 1"
   },
@@ -54,10 +54,10 @@
     "eslint-plugin-jsdoc": "^36.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "mocha": "^8.4.0",
+    "mocha": "^9.1.3",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
-    "ts-mocha": "^8.0.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.3.2"
   },
   "dependencies": {
